--- a/core/src/main/res/drawable/ic_repeat.xml
+++ b/core/src/main/res/drawable/ic_repeat.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M21,1H3C1.9,1 1,1.9 1,3v18c0,1.1 0.9,2 2,2h18c1.1,0 2,-0.9 2,-2V3C23,1.9 22.1,1 21,1zM19,19H6.83l1.58,1.58L7,22l-4,-4l4,-4l1.41,1.42L6.83,17H17v-4h2V19zM17,10l-1.41,-1.42L17.17,7H7v4H5V5h12.17l-1.58,-1.58L17,2l4,4L17,10z"
+      android:pathData="M7,7h10v3l4,-4 -4,-4v3L5,5v6h2L7,7zM17,17L7,17v-3l-4,4 4,4v-3h12v-6h-2v4z"
       android:fillColor="?attr/action_icon_color"/>
 </vector>
