--- a/app/src/main/res/layout/audioplayer_fragment.xml
+++ b/app/src/main/res/layout/audioplayer_fragment.xml
@@ -80,6 +80,23 @@
         android:layoutDirection="ltr"
         android:orientation="vertical">
 
+<!--        <LinearLayout-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_marginLeft="16dp"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:layout_marginRight="16dp"-->
+<!--            android:layout_marginBottom="8dp"-->
+<!--            android:orientation="horizontal">-->
+
+<!--            <ImageView-->
+<!--                android:id="@+id/repeat_episode"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="1"-->
+<!--                app:srcCompat="@drawable/ic_repeat" />-->
+<!--        </LinearLayout>-->
+
         <de.danoeh.apexpod.view.ChapterSeekBar
             android:id="@+id/sbPosition"
             android:layout_width="match_parent"
@@ -156,13 +173,6 @@
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/ic_play_48dp"
                     tools:srcCompat="@drawable/ic_play_48dp" />
-
-                <ImageView
-                    android:id="@+id/repeat_episode"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:src="@drawable/ic_repeat" />
 
             </RelativeLayout>
 
