--- a/app/src/main/res/layout/addfeed.xml
+++ b/app/src/main/res/layout/addfeed.xml
@@ -122,14 +122,14 @@
                     style="@style/AddPodcastTextView"
                     android:text="@string/search_fyyd_label"/>
 
-            <TextView
-                    android:id="@+id/searchGPodderButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:drawableStartCompat="@drawable/ic_search"
-                    app:drawableLeftCompat="@drawable/ic_search"
-                    style="@style/AddPodcastTextView"
-                    android:text="@string/browse_gpoddernet_label"/>
+<!--            <TextView-->
+<!--                    android:id="@+id/searchGPodderButton"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    app:drawableStartCompat="@drawable/ic_search"-->
+<!--                    app:drawableLeftCompat="@drawable/ic_search"-->
+<!--                    style="@style/AddPodcastTextView"-->
+<!--                    android:text="@string/browse_gpoddernet_label"/>-->
 
             <TextView
                     android:id="@+id/searchPodcastIndexButton"
