--- a/app/src/main/res/layout/edit_text_dialog.xml
+++ b/app/src/main/res/layout/edit_text_dialog.xml
@@ -11,5 +11,12 @@
             android:inputType="text"
             android:ems="10"
             android:id="@+id/urlEditText" />
+<!--    <androidx.appcompat.widget.AppCompatAutoCompleteTextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:inputType="text"-->
+<!--        android:ems="10"-->
+<!--        auto-->
+
 
 </LinearLayout>
