--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -16,18 +16,24 @@
 
     <!-- Theme colors -->
     <color name="background_light">#FFFFFF</color>
-    <color name="background_elevated_light">#EFEEEE</color>
     <color name="background_darktheme">#21272b</color>
+
+    <color name="background_elevated_light">#EFEEEE</color>
     <color name="background_elevated_darktheme">#2D3337</color>
     <color name="highlight_light">#46C6C6C6</color>
+
     <color name="highlight_dark">#43707070</color>
     <color name="highlight_trueblack">#43707070</color>
+
     <color name="non_square_icon_background">#22777777</color>
+
     <color name="seek_background_light">#90000000</color>
     <color name="seek_background_dark">#905B5B5B</color>
 
     <color name="accent_light">#0078C2</color>
-    <color name="accent_dark">#3D8BFF</color>
+<!--    <color name="accent_dark">#3D8BFF</color>-->
+    <color name="accent_dark">#F00</color>
+
     <color name="icon_background_gradient_start">#0ba2ff</color>
     <color name="icon_background_gradient_end">#0878ff</color>
 
@@ -37,6 +43,7 @@
     <!-- filter dialog -->
     <color name="dialog_filter_clear_inactive_light">#666666</color>
     <color name="dialog_filter_clear_inactive_dark">#bbbbbb</color>
+
     <color name="dialog_filter_inactive_light">#eeeeee</color>
     <color name="dialog_filter_inactive_dark">#555555</color>
 </resources>
