--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -30,12 +30,13 @@
     <color name="seek_background_light">#90000000</color>
     <color name="seek_background_dark">#905B5B5B</color>
 
-    <color name="accent_light">#0078C2</color>
+<!--    <color name="accent_light">#0078C2</color>-->
 <!--    <color name="accent_dark">#3D8BFF</color>-->
-    <color name="accent_dark">#F00</color>
+    <color name="accent_light">#f00</color>
+    <color name="accent_dark">#f00</color>
 
-    <color name="icon_background_gradient_start">#0ba2ff</color>
-    <color name="icon_background_gradient_end">#0878ff</color>
+    <color name="icon_background_gradient_start">#FF3636</color>
+    <color name="icon_background_gradient_end">#D50000</color>
 
     <color name="master_switch_background_light">#DDDDDD</color>
     <color name="master_switch_background_dark">#191919</color>
