--- a/app/src/main/res/layout/edit_playlists_dialog.xml
+++ b/app/src/main/res/layout/edit_playlists_dialog.xml
@@ -10,7 +10,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playlistsRecycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="400dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
